{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 29,
  "lineage": "03ad0f41-f7d4-a100-e6e7-e102fa7d8850",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c933ec2bc7baa931",
            "association_id": "eipassoc-093046f545e654bf2",
            "domain": "vpc",
            "id": "eipalloc-0c933ec2bc7baa931",
            "instance": "i-0ad697859cb9bc99c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aa81ecc356d06c47",
            "private_dns": "ip-10-0-1-7.ec2.internal",
            "private_ip": "10.0.1.7",
            "public_dns": "ec2-50-17-99-60.compute-1.amazonaws.com",
            "public_ip": "50.17.99.60",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.vpc1_instance",
            "aws_security_group.tfsg",
            "aws_subnet.tf-vpc-public-1a",
            "aws_vpc.tf-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vpc1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:794704351189:instance/i-0ad697859cb9bc99c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ad697859cb9bc99c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0aa81ecc356d06c47",
            "private_dns": "ip-10-0-1-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.7",
            "public_ip": "50.17.99.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c0d102e3e568e1c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-026e0df6e03045b55",
            "tags": {
              "name": "vpc1-public-instance"
            },
            "tags_all": {
              "name": "vpc1-public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e100be1d93af7285"
            ]
          },
          "dependencies": [
            "aws_security_group.tfsg",
            "aws_subnet.tf-vpc-public-1a",
            "aws_vpc.tf-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794704351189:internet-gateway/igw-0c5914e6aa5176cb1",
            "id": "igw-0c5914e6aa5176cb1",
            "owner_id": "794704351189",
            "tags": {
              "name": "vpc internet gateway"
            },
            "tags_all": {
              "name": "vpc internet gateway"
            },
            "vpc_id": "vpc-04a7ccd433ee32dc6"
          },
          "dependencies": [
            "aws_vpc.tf-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc1-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794704351189:route-table/rtb-0ee97fa503405764d",
            "id": "rtb-0ee97fa503405764d",
            "owner_id": "794704351189",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5914e6aa5176cb1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "ROute Table  for VPC 1"
            },
            "tags_all": {
              "name": "ROute Table  for VPC 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a7ccd433ee32dc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-igw",
            "aws_vpc.tf-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e46ab69d163c8e6",
            "route_table_id": "rtb-0ee97fa503405764d",
            "subnet_id": "subnet-026e0df6e03045b55"
          },
          "dependencies": [
            "aws_internet_gateway.vpc-igw",
            "aws_route_table.vpc1-route-table",
            "aws_subnet.tf-vpc-public-1a",
            "aws_vpc.tf-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tfsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794704351189:security-group/sg-0e100be1d93af7285",
            "description": "for terraform",
            "egress": [],
            "id": "sg-0e100be1d93af7285",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-sg",
            "name_prefix": "",
            "owner_id": "794704351189",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a7ccd433ee32dc6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tf-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tf-vpc-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794704351189:subnet/subnet-026e0df6e03045b55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026e0df6e03045b55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794704351189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-04a7ccd433ee32dc6"
          },
          "dependencies": [
            "aws_vpc.tf-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tf-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794704351189:vpc/vpc-04a7ccd433ee32dc6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015c0349cecb6bf3b",
            "default_route_table_id": "rtb-03b9c20d8a87ee595",
            "default_security_group_id": "sg-0f59baf0fa594193e",
            "dhcp_options_id": "dopt-04427f69a8abde7e3",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a7ccd433ee32dc6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03b9c20d8a87ee595",
            "owner_id": "794704351189",
            "tags": {
              "name": "terraform-vpc"
            },
            "tags_all": {
              "name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}